--- a/antares-movies/src/pages/Home/home.css
+++ b/antares-movies/src/pages/Home/home.css
@@ -4,6 +4,13 @@
 
 }
 
+.loading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+}
+
 .movies-list article{
     width: 100%;
     background-color: aliceblue;
@@ -34,7 +41,7 @@
     justify-content: center;
     padding: 10px 0;
     font-size: 24px;
-    background-color: blue;
+    background-color: blueviolet;
     text-decoration: none;
     color: aliceblue;
     border-top-left-radius: 10px;
